--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -19,6 +19,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0"
   }
