--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.4",
+    "@next/eslint-plugin-next": "^12.0.7",
     "tailwindcss": "^3.0.0"
   }
 }
