--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -18,12 +18,14 @@
     "tailwind-scrollbar-hide": "^1.1.6"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.7",
+    "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.4",
-    "@next/eslint-plugin-next": "^12.0.7",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
+    "typescript": "^4.5.4"
   }
 }
