--- a/spotify-client/.eslintrc.json
+++ b/spotify-client/.eslintrc.json
@@ -5,7 +5,8 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended", 
         "plugin:react/recommended",
         "plugin:react-hooks/recommended",
         "plugin:@next/next/recommended"
@@ -18,7 +19,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "@typescript-eslint"
     ],
     "rules": {
         "react/react-in-jsx-scope": "off"
