--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@types/lodash": "^4.14.178",
     "lodash": "^4.17.21",
     "next": "^12.0.7",
     "next-auth": "^4.0.5",
