--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
     "@types/react": "^17.0.38",
+    "@types/spotify-web-api-node": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "autoprefixer": "^10.4.0",
