--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@trpc/client": "^9.16.0",
+    "@trpc/next": "^9.16.0",
+    "@trpc/react": "^9.16.0",
+    "@trpc/server": "^9.16.0",
     "@types/lodash": "^4.14.178",
     "lodash": "^4.17.21",
     "next": "^12.0.7",
@@ -16,7 +20,8 @@
     "react-query": "^3.34.6",
     "recoil": "^0.5.2",
     "spotify-web-api-node": "^5.0.2",
-    "tailwind-scrollbar-hide": "^1.1.6"
+    "tailwind-scrollbar-hide": "^1.1.6",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
