Convert playlists to TRPC

--- a/spotify-client/tsconfig.json
+++ b/spotify-client/tsconfig.json
@@ -27,7 +27,7 @@
     "types/next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/hooks/spotify/useSpotifyPrefetchPlaylist.js"  ],
   "exclude": [
     "node_modules"
   ]
