--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -16,6 +16,7 @@
     "next": "^12.0.7",
     "next-auth": "^4.0.6",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.6",
     "recoil": "^0.5.2",
