--- a/spotify-client/package.json
+++ b/spotify-client/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
+    "@types/node": "18.7.18",
     "@types/react": "^17.0.38",
     "@types/spotify-web-api-node": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
